--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,33 @@
-# Logs
-logs
+# Exclude system directories
+Application Data/
+AppData/
+Contacts/
+Cookies/
+Desktop/
+Documents/
+Downloads/
+Favorites/
+Links/
+Music/
+NTUSER.DAT
+Pictures/
+Saved Games/
+Searches/
+SendTo/
+Start Menu/
+Templates/
+Videos/
+.vscode/
+node_modules/
+
+# Exclude specific file types
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+*.pyc
+*.class
+*.swp
+*.pdf
+*.docx
+*.xlsx
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Exclude config or sensitive files
+.env
