Solved Deployment Problems

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Aman2125.github.io/My-Portfolio",
   "dependencies": {
     "@eslint/js": "^9.13.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -27,7 +28,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
   "devDependencies": {
     "@types/node": "^22.7.7",
     "@vitejs/plugin-react": "^4.3.3",
+    "gh-pages": "^6.2.0",
     "typescript": "^5.6.3",
     "vite": "^5.4.9"
   }
